<resources>
    <string name="app_name">Multi Language App</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login Now</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="forgotPassword">Forgot Password?</string>
</resources>
