<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_back"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/img_front"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/heart"/>

        <RelativeLayout
            android:id="@+id/relay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_front">

            <TextView
                android:id="@+id/tv1_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="30sp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_below="@+id/tv1_login"
                android:id="@+id/linear1"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif-light"/>

                    <EditText
                        android:id="@+id/ed_email"
                        android:inputType="textEmailAddress"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_back"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15sp"
                        android:paddingRight="15sp"
                        android:textColor="@color/white"
                        android:textSize="15sp"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif-light"/>

                    <EditText
                        android:id="@+id/ed_pass"
                        android:textStyle="bold"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_back"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15sp"
                        android:paddingRight="15sp"
                        android:textColor="@color/white"
                        android:textSize="15sp"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:background="@drawable/btn_back"
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/linear1"
                android:text="@string/login"
                android:layout_marginTop="50dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relay2"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dontHaveAccount"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_signup"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/signUp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/forgotPassword"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</RelativeLayout>